--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "e9e8a28a2a31d4fd",
+        "id": "20f4662e3c600f1e",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/example.md",
+            "file": "policy-summary.md",
             "mode": "source"
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/example.md",
+                "file": "policy-summary.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,10 +86,11 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "_posts/example.md",
+    "policy-summary.md",
+    "about.md",
     "_projects/example.md",
+    "_posts/example.md",
     "_posts/Untitled.md",
-    "Untitled.md",
-    "about.md"
+    "Untitled.md"
   ]
 }
