--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "20f4662e3c600f1e",
+        "id": "533471ecbf2644b1",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "policy-summary.md",
+            "file": "_projects/example.md",
             "mode": "source"
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "policy-summary.md",
+                "file": "_projects/example.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,9 +86,9 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "_projects/example.md",
     "policy-summary.md",
     "about.md",
-    "_projects/example.md",
     "_posts/example.md",
     "_posts/Untitled.md",
     "Untitled.md"
