--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_projects/example.md",
+            "file": "_posts/bingling-sama-blog.md",
             "mode": "source"
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_projects/example.md",
+                "file": "_posts/bingling-sama-blog.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,10 +86,10 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "_posts/example.md",
     "_projects/example.md",
     "policy-summary.md",
     "about.md",
-    "_posts/example.md",
     "_posts/Untitled.md",
     "Untitled.md"
   ]
