--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -10,10 +10,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/example.md",
+            "file": "_posts/happy-new-year.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "22912fe2b5f09c21"
+      },
+      {
+        "id": "a687a44e13b45603",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_posts/happy-new-year.md",
+            "mode": "preview"
+          }
+        },
+        "group": "22912fe2b5f09c21"
       }
     ],
     "direction": "vertical"
@@ -53,7 +66,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 209
   },
   "right": {
     "id": "6f6959499cc939a8",
@@ -69,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/example.md",
+                "file": "_posts/happy-new-year.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,6 +99,7 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "_posts/happy-new-year.md",
     "_posts/bingling-sama-blog.md",
     "_projects/bingling-sama-blog.md",
     "_posts/example.md",
