--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -4,7 +4,19 @@
     "type": "split",
     "children": [
       {
-        "id": "533471ecbf2644b1",
+        "id": "8732e68c46943738",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_posts/happy-new-year.md",
+            "mode": "preview"
+          }
+        },
+        "group": "ffa4945335328949"
+      },
+      {
+        "id": "89a8e1dac9250d90",
         "type": "leaf",
         "active": true,
         "state": {
@@ -14,19 +26,7 @@
             "mode": "source"
           }
         },
-        "group": "22912fe2b5f09c21"
-      },
-      {
-        "id": "a687a44e13b45603",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_posts/happy-new-year.md",
-            "mode": "preview"
-          }
-        },
-        "group": "22912fe2b5f09c21"
+        "group": "ffa4945335328949"
       }
     ],
     "direction": "vertical"
@@ -100,6 +100,7 @@
   },
   "lastOpenFiles": [
     "_posts/happy-new-year.md",
+    "_posts/TODO.md",
     "_posts/bingling-sama-blog.md",
     "_projects/bingling-sama-blog.md",
     "_posts/example.md",
