--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -4,29 +4,16 @@
     "type": "split",
     "children": [
       {
-        "id": "8732e68c46943738",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_posts/happy-new-year.md",
-            "mode": "preview"
-          }
-        },
-        "group": "ffa4945335328949"
-      },
-      {
-        "id": "89a8e1dac9250d90",
+        "id": "3c9613fc4686b765",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/happy-new-year.md",
+            "file": "_projects/bingling-sama-blog.md",
             "mode": "source"
           }
-        },
-        "group": "ffa4945335328949"
+        }
       }
     ],
     "direction": "vertical"
@@ -82,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/happy-new-year.md",
+                "file": "_projects/bingling-sama-blog.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,10 +86,10 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "_projects/bingling-sama-blog.md",
     "_posts/happy-new-year.md",
     "_posts/TODO.md",
     "_posts/bingling-sama-blog.md",
-    "_projects/bingling-sama-blog.md",
     "_posts/example.md",
     "_projects/example.md",
     "policy-summary.md",
