--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -10,10 +10,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_projects/bingling-sama-blog.md",
+            "file": "_posts/happy-new-year.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "2d70edaed27fbff5"
+      },
+      {
+        "id": "bfae74fd9844e15a",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_posts/happy-new-year.md",
+            "mode": "preview"
+          }
+        },
+        "group": "2d70edaed27fbff5"
       }
     ],
     "direction": "vertical"
@@ -69,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_projects/bingling-sama-blog.md",
+                "file": "_posts/happy-new-year.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,8 +99,8 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "_projects/bingling-sama-blog.md",
     "_posts/happy-new-year.md",
+    "_projects/bingling-sama-blog.md",
     "_posts/TODO.md",
     "_posts/bingling-sama-blog.md",
     "_posts/example.md",
