--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -99,15 +99,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "_posts/lollipopstudio/RemakeNotes.md",
+    "_posts/springboot/Day1.md",
+    "_posts/happy-new-year.md",
     "_posts/lollipopstudio/Day1.md",
     "_posts/springboot/Untitled.md",
-    "_posts/springboot/Day1.md",
     "_posts/Untitled.md",
-    "_posts/happy-new-year.md",
     "_projects/bingling-sama-blog.md",
     "_posts/TODO.md",
     "_posts/bingling-sama-blog.md",
-    "_posts/example.md",
-    "_projects/example.md"
+    "_posts/example.md"
   ]
 }
