--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "bingling_sama",
     "冰凌"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "babel-helper-vue-jsx-merge-props": "^2.0.3"
+  }
 }
