--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -6,11 +6,26 @@
       {
         "id": "0cf1d74431fc6d3e",
         "type": "leaf",
-        "active": true,
         "state": {
-          "type": "empty",
-          "state": {}
-        }
+          "type": "markdown",
+          "state": {
+            "file": "_posts/lollipopstudio/remakenotes/01.md",
+            "mode": "source"
+          }
+        },
+        "group": "9e067942c2664f19"
+      },
+      {
+        "id": "911e7bc6a77dc64f",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_posts/lollipopstudio/remakenotes/01.md",
+            "mode": "preview"
+          }
+        },
+        "group": "9e067942c2664f19"
       }
     ],
     "direction": "vertical"
@@ -66,9 +81,12 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "_posts/lollipopstudio/remakenotes/01.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
+                "showSearch": false,
+                "searchQuery": "",
                 "backlinkCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -81,16 +99,17 @@
     "width": 300,
     "collapsed": true
   },
+  "active": "0cf1d74431fc6d3e",
   "lastOpenFiles": [
+    "_posts/lollipopstudio/remakenotes/01.md",
+    "_posts/lollipopstudio/RemakeNotes.md",
     "_projects/magicelf3.md",
     "_projects/Untitled.md",
     "_projects/lollipop-studio.md",
     "_projects/bingling-sama-blog.md",
     "_posts/happy-new-year.md",
     "Untitled.md",
-    "_posts/lollipopstudio/RemakeNotes.md",
     "_posts/springboot/Day1.md",
-    "_posts/lollipopstudio/Day1.md",
-    "_posts/springboot/Untitled.md"
+    "_posts/lollipopstudio/Day1.md"
   ]
 }
