--- a/blog/.obsidian/workspace
+++ b/blog/.obsidian/workspace
@@ -9,23 +9,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/lollipopstudio/remakenotes/01.md",
+            "file": "_posts/lollipopstudio/remakenotes/02.md",
             "mode": "source"
           }
         },
-        "group": "9e067942c2664f19"
+        "group": "414d3b0ad80580f5"
       },
       {
-        "id": "911e7bc6a77dc64f",
+        "id": "e665376b986e3046",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_posts/lollipopstudio/remakenotes/01.md",
-            "mode": "preview"
+            "file": "_posts/lollipopstudio/remakenotes/02.md",
+            "mode": "source"
           }
         },
-        "group": "9e067942c2664f19"
+        "group": "414d3b0ad80580f5"
       }
     ],
     "direction": "vertical"
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_posts/lollipopstudio/remakenotes/01.md",
+                "file": "_posts/lollipopstudio/remakenotes/02.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,15 +101,15 @@
   },
   "active": "0cf1d74431fc6d3e",
   "lastOpenFiles": [
+    "_posts/lollipopstudio/remakenotes/02.md",
     "_posts/lollipopstudio/remakenotes/01.md",
+    "Pasted image 20210606202035.png",
+    "_posts/lollipopstudio/remakenotes/Untitled.md",
     "_posts/lollipopstudio/RemakeNotes.md",
     "_projects/magicelf3.md",
     "_projects/Untitled.md",
     "_projects/lollipop-studio.md",
     "_projects/bingling-sama-blog.md",
-    "_posts/happy-new-year.md",
-    "Untitled.md",
-    "_posts/springboot/Day1.md",
-    "_posts/lollipopstudio/Day1.md"
+    "_posts/happy-new-year.md"
   ]
 }
